[package]
name = "preT"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
# iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", features = ["debug", "image", "smol"] } # we should test the main branch it seems like it does proper centering
iced = { version = "0.13.1", features = ["debug", "image", "smol"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
